nem tudom miért nincs benne a vége

--- a/main.css
+++ b/main.css
@@ -15,38 +15,62 @@
   max-width: calc(100vw - 10px);
   height: 350px;
   max-height: calc(100vw - 10px);
-    background-color: aqua;
+    background-color:aquamarine;
     display: relative;
     border-radius: 50px;
+    position: absolute;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 body {
   display: flex;
   justify-content: center;
   align-items:center;
-  font-family:fantasy;
+  font-family:cursive;
   text-align: justify;
+  position: relative;
 }
 body {
   height: 100vh;
-  background: url('assets/h%C3%A1tt%C3%A9r.jpg') no-repeat center center;
+  background: url('assets/h%C3%A1tt%C3%A9r.jpg') no-repeat center;
   background-size: cover;
 }
 
 .header{
-    margin: 15px;
+    margin: 10px;
+    height: 130px;
+    
 }
 
+.downer{
+    height: 160px;
+    margin: 10px;
+    position: absolute;
+    top: 130px;
+}
 .profileimg {
     height: 110px;
     width: 110px;
     border-radius: 35px;
+    position: relative;
+    top: 10px;
+    left: 15px;
 }
 
+.info{
+    display: inline-block;
+    float: left;
+    position: absolute;
+    top:50px;
+    right: 70px;
+    
+}
 .profileimg:hover{
-    transition: all .7s ease-in-out;
-    transform: scale(1.1);
-    transform: rotateX(20deg) rotateY(360deg) rotateZ(-5deg);
+    transition: all 1s ease-in-out;
+    transform: rotateX(20deg) rotateY(360deg) scale(1.1);
     border-radius: 50px;
 }
 
@@ -59,3 +83,41 @@ body {
 }
 
 @-webkit-keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@-webkit-keyframes snowflakes-shake{0%,100%{-webkit-transform:translateX(0);transform:translateX(0)}50%{-webkit-transform:translateX(80px);transform:translateX(80px)}}@keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@keyframes snowflakes-shake{0%,100%{transform:translateX(0)}50%{transform:translateX(80px)}}.snowflake{position:fixed;top:-10%;z-index:9999;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;cursor:default;-webkit-animation-name:snowflakes-fall,snowflakes-shake;-webkit-animation-duration:10s,3s;-webkit-animation-timing-function:linear,ease-in-out;-webkit-animation-iteration-count:infinite,infinite;-webkit-animation-play-state:running,running;animation-name:snowflakes-fall,snowflakes-shake;animation-duration:10s,3s;animation-timing-function:linear,ease-in-out;animation-iteration-count:infinite,infinite;animation-play-state:running,running}.snowflake:nth-of-type(0){left:1%;-webkit-animation-delay:0s,0s;animation-delay:0s,0s}.snowflake:nth-of-type(1){left:10%;-webkit-animation-delay:1s,1s;animation-delay:1s,1s}.snowflake:nth-of-type(2){left:20%;-webkit-animation-delay:6s,.5s;animation-delay:6s,.5s}.snowflake:nth-of-type(3){left:30%;-webkit-animation-delay:4s,2s;animation-delay:4s,2s}.snowflake:nth-of-type(4){left:40%;-webkit-animation-delay:2s,2s;animation-delay:2s,2s}.snowflake:nth-of-type(5){left:50%;-webkit-animation-delay:8s,3s;animation-delay:8s,3s}.snowflake:nth-of-type(6){left:60%;-webkit-animation-delay:6s,2s;animation-delay:6s,2s}.snowflake:nth-of-type(7){left:70%;-webkit-animation-delay:2.5s,1s;animation-delay:2.5s,1s}.snowflake:nth-of-type(8){left:80%;-webkit-animation-delay:1s,0s;animation-delay:1s,0s}.snowflake:nth-of-type(9){left:90%;-webkit-animation-delay:3s,1.5s;animation-delay:3s,1.5s}.snowflake:nth-of-type(10){left:25%;-webkit-animation-delay:2s,0s;animation-delay:2s,0s}.snowflake:nth-of-type(11){left:65%;-webkit-animation-delay:4s,2.5s;animation-delay:4s,2.5s}
+
+.links{
+    width: 250px;
+    height: 80px;
+    font-size: 12px;
+    position: relative;
+    bottom: -5px;
+    left: 10px;
+}
+
+.elf{
+   display: inline-block;
+    background: url('assets/elf-1087758_960_720.png') no-repeat center center;
+    background-size: contain;
+    height: 90px;
+    width: 100px;
+    position: absolute;
+    bottom: -20px;
+    right: 10px;
+}
+
+a{
+ display: block;
+    
+}
+.about {
+    font-size: 13px;
+    margin: 5px;
+}
+
+h1 {
+    font-size: 19px;
+}
+
+ul{
+    list-style-type: none;
+    float: left;
+}
